# serverMaintenance

./: README.md  commit_info
codeSources/vpnPortKit/myClient/: CMakeLists.txt
codeSources/vpnPortKit/myClient/src/: main.cpp
codeSources/vpnPortKit/myServer/: CMakeLists.txt
codeSources/vpnPortKit/myServer/include/Utils/: ConfigMap.hpp  IntelliLog.h  MicroDataSet.hpp
codeSources/vpnPortKit/myServer/src/: main.cpp
codeSources/vpnPortKit/myServer/src/Utils/: IntelliLog.cpp
commonSoftware/: openvpn-install.sh  openvpn-install_no_ui.sh
commonSoftware/frp_0.33.0_linux_amd64/: README.md  createNewCli.sh  frpc.ini  frpc.service  installAll.sh  installAllAsSlave.sh  known_hosts  openvpn-config.sh  openvpn-install_no_ui.sh  openvpn-install_no_ui_hw.sh  openvpn-new_cli.sh  token
docker/: README.md  dockerOnBoot.sh  envokeDockerCli.sh  myDockerCli.service
docker/template_cuda_ubuntu/: dockerOnBoot.sh  docker_buildImage.sh  docker_est.sh  docker_names  docker_new.sh  docker_startAll.sh  docker_stopAll.sh  dockerfile  myDockerCli.service
docker/template_nocuda_ubuntu/: README.md  docker-compose  docker_buildImage.sh  docker_del.sh  docker_new.sh  docker_new_with_meter.sh  docker_new_with_vm.sh  docker_run.sh  dockerfile
physicalMachineScripts/: installCuda.sh  installCuda_2004.sh  installDocker.sh  installDockerNoCuda.sh
